navbar를 이용해서 아이콘으로 홈 이동과 cocktail 클릭으로 cocktail 페이지로 이동 - BrowserRouter와 Route, Routes를 이용 - css 이용하여 cocktail 페이지에서도 container 페이지와 동일하게 페이지 css 구성

--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -4,14 +4,24 @@
 
 .homeBg {
     min-height: 100vh;
-
+    display: flex;
+    flex-direction: column;
 }
 
+.home-container, .cocktail-container {
+    flex-grow: 1;
+}
+.home-header, .home-footer {
+  padding: 0 40px;
+  background-color: rgb(237, 255, 255);
+}
+
+
+/* navbar 관련 css */
 .navbar {
-    height: 6rem;
+    height: 5rem;
     padding: 2rem
 }
-
 .navbar-end {
     a{
         margin: 0 1.5rem 0 0;
@@ -22,9 +32,6 @@
            
     }
 }
-
-
-
 .logo {
     width: 4rem;
     height: 4rem;
